--- a/templates/welcome.twig
+++ b/templates/welcome.twig
@@ -1,28 +1,34 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
-  <div class="bg-slate-900 p-8 h-screen w-screen flex items-center">
+  <div class="bg-slate-700 w-full text-center text-white">Welcome!</div>
 
-    <div class="w-3/4 h-full flex justify-center items-center">
-      <img src="./assets/logo.svg" alt="" srcset="">
+  <div class="h-screen w-screen bg-slate-800 flex justify-around items-center">
+    <div class="w-1/2 p-4 flex justify-center">
+      <div class=" h-full flex justify-center items-center">
+        <img class="h-96" src="./assets/logo.svg" alt="" srcset="">
+      </div>
     </div>
 
-    <div class="h-[400px] rounded-lg bg-slate-800/50 w-[4px]"></div>
+    <div class="h-[400px] rounded-lg bg-slate-700/50 w-[4px]"></div>
 
-    <div class="w-3/4 h-full flex justify-center items-center">
-      <input class="bg-slate-800/50 w-2/5 h-6 pl-2 rounded-lg focus:outline-none focus:ring focus:border-slate-800/100" 
-      placeholder="Submit your email for updates" 
-      autocomplete="off" 
-      type="email"
-      name="emailField" 
-      id="emailField">
+    <div class="w-1/2 h-1/2 p-4 flex justify-center">
+      <div class=" h-full w-full flex justify-center items-center">
+
+        <!-- <div class="bg-sky-500 w-1/2">1</div> -->
+        <input
+          class="bg-slate-700/50 w-1/2 text-center text-gray-400 rounded-lg focus:outline-none focus:ring focus:border-slate-800/100"
+          placeholder="Submit your email for updates" autocomplete="off" type="email" name="emailField" id="emailField">
+      </div>
     </div>
-
   </div>
 </body>
+
 </html>
